# zoterho-template

./: .editorconfig  .gitattributes  .gitlab-ci.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ECOSYSTEM.scm  Justfile  LICENSE.txt  MAINTAINERS.md  META.scm  README.adoc  README.md  ROADMAP.md  RSR-COMPLIANCE.md  RhodiumColorizer.res  SECURITY.md  ZoteRhoTemplate.res  bootstrap.res  build.oil  claude.md  justfile  justfile-cookbook.adoc  manifest.json  rescript.config  updates-2.0.json
.devcontainer/: devcontainer.json  post-create.sh
.github/: markdown-link-check-config.json
.github/workflows/: ci.yml  rsr-compliance.yml  security.yml  test-examples.yml
.well-known/: ai.txt  humans.txt  security.txt
docs/guides/: migration-guide.md  python-implementation.md  rust-implementation.md  security-hardening.md  testing-best-practices.md  typescript-implementation.md
examples/python-minimal/: README.md  example.yaml  pyproject.toml
examples/python-minimal/tests/: test_parser.py
examples/python-minimal/yaml_validator/: __init__.py  __main__.py  cli.py  parser.py
examples/rust-minimal/: Cargo.toml  README.md  example.conf
examples/rust-minimal/src/: main.rs
examples/typescript-minimal/: README.md  data.json  package.json  schema.json  tsconfig.json
examples/typescript-minimal/src/: index.test.ts  index.ts
