[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rsr-python-example"
version = "0.1.0"
description = "RSR-compliant Python example with zero pip dependencies"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT OR Palimpsest-0.8"}
authors = [
    {name = "Zoterho Template Contributors"}
]
keywords = ["rsr", "rhodium", "python", "zero-dependencies", "offline-first"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Hyperpolymath/zoterho-template"
Repository = "https://github.com/Hyperpolymath/zoterho-template"

[project.scripts]
yaml-validator = "yaml_validator:main"

[tool.setuptools]
packages = ["yaml_validator"]

[tool.mypy]
strict = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
